@@ -219,12 +219,14 @@ APR_DECLARE(apr_status_t) apr_password_get(const char *prompt, char *pwbuf, apr_
 #else
     char *pw_got = getpass(prompt);
 #endif
+    apr_status_t rv = APR_SUCCESS;
+
     if (!pw_got)
         return APR_EINVAL;
+    if (strlen(pw_got) >= *bufsiz) {
+        rv = APR_ENAMETOOLONG;
+    }
     apr_cpystrn(pwbuf, pw_got, *bufsiz);
     memset(pw_got, 0, strlen(pw_got));
-    if (strlen(pw_got) >= *bufsiz) {
-        return APR_ENAMETOOLONG;
-    }
-    return APR_SUCCESS; 
+    return rv;
 }
